<resources>
    <string name="app_name">proyectoMoviles</string>
    <string name="buttonE">Estudiante</string>
    <string name="buttonP">Profesor</string>
    <string name="nombreE">Nombre</string>
    <string name="apellidoE">Apellido</string>
    <string name="correoE">Correo Electronico</string>
    <string name="contraseniaE">Contraseña</string>
    <string name="verificarCE">Verificar Contraseña</string>
    <string name="domicilio">Domicilio</string>
    <string name="buttonS">Siguiente</string>
    <string name="celular">Celular</string>
    <string name="verificar">Verificar</string>
    <string name="codigoVer">Ingrese código de verificación</string>
    <string name="buscar">Que materia deseas?</string>
    <string name="title_activity_navegacion">navegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="codigoPais">+593</string>
    <string name="Elige_una_Materia">Elige una Materia</string>
    <string name="Elige_una_Biblioteca"> Elige una Biblioteca</string>
    <string name="Mas_posibilidades_con_tu_cuenta">Mas posibilidades con tu cuenta</string>
    <string name="Genera_ganancias_como_Tutor">Genera ganancias como Tutor</string>
    <string name="foto">foto del estudiante</string>
    <string name="topicos">Elige Topicos</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--SelectDateActivity-->
    <string name="Elige_fecha"> Elige la Fecha y la Hora</string>
    <string name="button_date">FECHA</string>
    <string name="button_time">HORA INICIO</string>
    <string name="button_time_finish">HORA FIN</string>
    <string name="title_date_select">Elige la fecha de la tutoria</string>
    <string name="title_time_select">Elige la hora de consulta</string>
    <string name="text_date">Fecha</string>
    <string name="text_time_start">Hora de inicio</string>
    <string name="text_time_end">Hora de fin</string>
    <string name="button_accept_date">ACEPTAR</string>
    <!-- ****************************** -->

    <!--DetailActivity-->
    <string name="materia_detail">Materia: </string>
    <string name="topic_detail">Tópico: </string>
    <string name="lugar_detail">Lugar: </string>
    <string name="date_detail">Fecha: </string>
    <string name="hora_detail">Hora: </string>
    <string name="title_detail">RESUMEN DE SELECCION</string>
    <string name="button_confirm_detail">CONFIRMAR</string>
    <string name="button_cancel_detail">CANCELAR</string>
    <!-- ****************************** -->

    <string name="servicio_titulo">Elije un Servicio</string>
    <string name="servicio_fecha">DD/MM/AAAA</string>
    <string name="servicio_moneda">"USD"</string>
    <string name="servicio_valor">"0.00"</string>
    <string name="servicio_nombre_profe">"Nombre del Profesor"</string>
    <string name="servicio_efectivo">"Efectivo"</string>
    <string name="servicio_detalle">Detalle de Servicio</string>
    <string name="servicio_detalle_ayuda">Ayuda</string>
    <string name="servicio_detalle_Recibo">Recibo</string>
    <string name="servicio_detalle_ayuda1">Mi tutor tuvo un mal comportamiento</string>
    <string name="servicio_detalle_ayuda2">Artículos perdidos</string>
    <string name="servicio_detaller_ayuda3">Reportar un robo</string>
    <string name="servicio_detalle_ayuda4">El tutor no era el que esperaba</string>
    <string name="servicio_detalle_ayuda5">El servicio no es el que esperaba</string>
    <string name="tiempo_restante">Tiempo Restante:</string>
    <string name="time_start">EMPEZAR:</string>
    <string name="title_provide_service">Tutoría</string>
  
  
    <string name="matematicas">"Fundamentos de Matemáticas"</string>
    <string name="fisica">Fundamentos de Física</string>
    <string name="quimica">"Fundamentos de Química"</string>
    <string name="geometria">"Fundamentos de Geometría"</string>

</resources>
