<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registroEstudiante">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/fondo2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="24dp"
        tools:layout_editor_absoluteX="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/nombreE"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editApel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/apellidoE"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="24sp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/correoE"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/domicilio"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="312dp"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorBR"
                android:onClick="siguiente"
                android:text="@string/buttonS"
                android:layout_gravity="center"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>