<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context=".DetalleServicio">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetalleServicio"
        android:layout_width="431dp"
        android:layout_height="61dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Widget.MaterialComponents.Snackbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="onClickAtras"
        android:tint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDetalleServicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:hint="@string/servicio_detalle"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarDetalleServicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbarDetalleServicio"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="432dp"
        android:layout_height="257dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetalleServicio"
        app:srcCompat="@drawable/math" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#00968D8D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textViewDetalleSerFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/servicio_fecha"
            android:onClick="llenarInformacion"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDetalleSerProfesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/servicio_nombre_profe"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetalleSerFecha" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/servicio_moneda"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintEnd_toStartOf="@+id/textViewDetalleSerValor"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDetalleSerValor"
            android:layout_width="46dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="5.50"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDetalleSerFormaPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/servicio_efectivo"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetalleSerValor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="429dp"
        android:layout_height="65dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ListView
            android:id="@+id/listaAyuda"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>